manifests/platform/argo-workflows/base/add-ca-to-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-workflows-server
spec:
  template:
    spec:
      containers:
      - name: argo-server
        volumeMounts:
          - name: ca-certs
            mountPath: /etc/ssl/certs
      volumes:
        - name: ca-certs
          secret:
            secretName: vault-ca
